[package]
name = "akashic_records"
version = "0.1.0"
#Why can't I change the edition?
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19.1", features = ["auto-initialize"] }
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4.17"
log-panics = { version = "2", features = ["with-backtrace"]}
log4rs = "1.2.0"