[package]
name = "akashic_records"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1.39.1", features = ["full"] }
serde_json = "1.0.120"
google-youtube3 = "5.0.5"
futures = "0.3.30"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
#apparently upgrading these brakes things, fix later
hyper = "0.14.30"
hyper-rustls = "0.25.0"
log = "0.4.22"
